--- a/trace/azure/location.config
+++ b/trace/azure/location.config
@@ -1,6 +1,4 @@
-eastasia	10.22.0.4:10001
-southeastasia	10.23.0.4:10001
-eastus2	10.1.0.4:10001
-australiaeast	10.28.0.4:10001
-westus2	10.3.0.4:10001
-francecentral	10.16.0.4:10001
+tendermint1	172.16.162.242:10001
+tendermint2	172.16.162.243:10001
+tendermint3	172.16.162.240:10001
+tendermint4	172.16.162.239:10001
