--- a/trace/azure/remote.config
+++ b/trace/azure/remote.config
@@ -1,6 +1,4 @@
-eastasia	207.46.138.42
-southeastasia	52.163.248.25
-eastus2	40.70.43.86
-australiaeast	52.187.247.81
-westus2	52.175.205.124
-francecentral	40.89.175.62
+tendermint1	120.27.242.16
+tendermint2	47.97.25.163
+tendermint3	114.55.38.133
+tendermint4	47.97.40.209
